<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.kruno.dummyrandomgenerator.MainActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prikazi_upute"
        android:id="@+id/gumbPrikaziUpute"
        android:onClick="prikaziUputu" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generiraj"
        android:id="@+id/gumbGenerirajSlucajni"
          android:layout_margin="0dp"
        android:onClick="generirajBroj" />

    <TextView
        android:id="@+id/tekstUputa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uputa_generiranje"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />
</LinearLayout>
